--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.8",
+    "axios": "^0.27.2",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.1.10",
     "gh-pages": "^4.0.0",
